--- a/index.html
+++ b/index.html
@@ -1,27 +1,101 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>My Website</title>
+  <meta charset="UTF-8">
+  <title>My Photo Website</title>
+
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
+
   <style>
     body {
-      font-family: Arial;
+      margin: 0;
+      font-family: 'Poppins', sans-serif;
+      background: #f2f2f2;
       text-align: center;
-      background: #f4f4f4;
     }
-    img {
-      width: 250px;
-      margin: 10px;
-      border-radius: 10px;
+
+    h1 {
+      margin: 30px 0 10px;
+      font-weight: 700;
+      letter-spacing: 2px;
+    }
+
+    /* MAIN PHOTO */
+    .main-photo {
+      width: 80%;
+      max-width: 800px;
+      margin: 20px auto;
+      border: 6px solid #000;   /* 👈 CHANGE BORDER COLOR HERE */
+      border-radius: 15px;
+      overflow: hidden;
+    }
+
+    .main-photo img {
+      width: 100%;
+      display: block;
+    }
+
+    /* COLLAGE GRID */
+    .collage {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 15px;
+      width: 80%;
+      max-width: 900px;
+      margin: 40px auto;
+    }
+
+    .collage img {
+      width: 100%;
+      height: 200px;
+      object-fit: cover;
+      border-radius: 12px;
+      border: 4px solid #444;  /* 👈 COLLAGE BORDER */
+      transition: transform 0.3s ease;
+    }
+
+    .collage img:hover {
+      transform: scale(1.05);
+    }
+
+    footer {
+      margin: 40px 0;
+      font-size: 14px;
+      color: #777;
+    }
+
+    /* MOBILE FRIENDLY */
+    @media (max-width: 768px) {
+      .collage {
+        grid-template-columns: repeat(2, 1fr);
+      }
     }
   </style>
 </head>
 <body>
 
-  <h1>Welcome to My Website</h1>
-  <p>My image gallery</p>
+  <h1>MY PHOTO GALLERY</h1>
+  <p>A simple & stylish layout</p>
 
-  <img src="photo1.jpg">
-  <img src="photo2.jpg">
+  <!-- MAIN IMAGE -->
+  <div class="main-photo">
+    <img src="main.jpg" alt="Main Photo">
+  </div>
+
+  <!-- COLLAGE -->
+  <div class="collage">
+    <img src="photo1.jpg">
+    <img src="photo2.jpg">
+    <img src="photo3.jpg">
+    <img src="photo4.jpg">
+    <img src="photo5.jpg">
+    <img src="photo6.jpg">
+  </div>
+
+  <footer>
+    © 2025 My Website
+  </footer>
 
 </body>
 </html>
